refactor modules for user